feat(system): 完善菜单管理功能
- 新增菜单添加、查询、更新、删除等接口- 实现菜单树结构查询和构建
- 添加菜单权限和缓存相关功能
- 优化菜单路径和组件处理逻辑
- 新增页面过渡动画配置